--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,93 +1,190 @@
-<!doctype html>
-<html lang="en">
-
+<!DOCTYPE html>
+<html>
 <head>
-    <title>about</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>About Us</title>
+    <style>
+        body{
+            background-color:white;
+            font-family: "Roboto",sans-serif;
+            font-size:18px;
+            margin:0px;
 
-    <link href="https://fonts.googleapis.com/css?family=Muli:400,700|Hepta+Slab:400,700&display=swap" rel="stylesheet">
+            color:darkslategray;
+            line-height: 25px;
+        }
+        .main1
+        {
+           color: #0b0b0b;
+            margin-left:15px;
+            margin-right:15px;
+        }
+        header{
+            background-color:#0A091A;
+            margin-top:0px;
+            color:whitesmoke;
+            padding:1px;
+            height:auto;
+        }
+        header ul{
+            list-style-type:none;
+            text-align:center;
+            padding:0px;
+            margin-top:2px;
 
-    <link rel="stylesheet" href="fonts/icomoon/style.css">
+        }
+        header ul li{
+            display: inline;
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="css/aos.css">
 
-    <!-- MAIN CSS -->
-    <link rel="stylesheet" href="css/style.css">
+        }
+        header ul li a{
+            text-decoration:none;
+            font-size:17px;
+            padding-right:8px;
+            padding-left8px;
+            margin-top:2px;
+            margin-left:300px;
+            margin-left:100px;
+            color:white;
+        //border-top:2px solid white;
+        }
+        header ul li a:hover{
+            color:grey;
 
+
+        }
+        header h3{
+            margin-left:50px;
+            font-size: 16px;
+            padding:0px;
+            font-weight:lighter;
+            font-family:"Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", Verdana, "sans-serif";
+            margin-bottom:2px;
+        }
+        .hrheader{
+            color: aqua;
+            margin-left:50px;
+            padding:0px;
+            margin-top:0px;
+            margin-bottom:2px;
+            margin-right:450px;
+        }
+        header h6{
+            margin-left:180px;
+            font-size: 10px;
+            padding:0px;
+            letter-spacing: 5px;
+            font-weight:bolder;
+            color:gray;
+            margin-top:0px;
+            margin-bottom:2px;
+            margin-bottom:0px;
+        }
+        header img{
+            margin-left:2px;
+            max-height: 100px;
+            max-width: 100px;
+            float:left;
+            clear:left;
+        }
+        .headermain{
+            background-color:black;
+            margin-top:0px;
+            padding:1px;
+        }
+
+
+        footer{
+            background-color:#1B1B1B;
+            color:white;
+            text-align:center;
+            font-size:17px;
+            margin-top:100px;
+            float:bottom;
+            clear:bottom;
+            padding:5px;
+            height:60px;
+            margin-left:0px;
+            margin-right:0px;
+        }
+        footer h5{
+            margin-top:20px;
+        }
+
+
+    </style>
 </head>
-
-<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-
-
-<div class="site-wrap" id="home-section">
+<body>
 
 
 
+<div class="main1">
+    <div class="firstp">
+        <h2><U><BR>THE COLLEGE</U></h2>
+        <p>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PPTM Arts and Science College, is a best self-financing
+            college in Malappuram district,
+            is committed to provide excellent and value-based education with a flair for ethics a&nbsp;nd &nbsp;professionalism.
+            The&nbsp; College&nbsp; is &nbsp;located &nbsp;amidst&nbsp; panoramic&nbsp; natural&nbsp; beauty over-looking the hills and valleys at cherur,
+            near Vangara a city of <br> various educational institutions- on &nbsp;the Vangara- Kunnumpuram road.
+            The College is easily accessible by road, rail and air. The College is governed by the PPTM sponsored by
+            the Yatheem khana committee cherur, a society instituted by topclass intellectuals of the Muslim
+            community.
+        </p></div>
+    <div class="secondp">
+        <h2>AIMS AND OBJECTIVES</h2>
+        <p>
 
-
-    <div class="ftco-blocks-cover-1">
-        <div class="site-section-cover overlay" style="background-image: url('images/hero_1.jpg')">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-md-7"><br>
-                        <h1 class="mb-3 text-primary">About Us</h1>
-                        <h3> <p>PPTM  arts and science college </p></h3>
-
-                    </div>
-                </div>
-            </div>
-        </div>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The College Management has chosen this
+            backward area for establishing the College with the aim of sharing the
+            responsibility of uplifting the people of the area by making technical education affordable and within reach.
+            The Management has no motive of making profit from the College but aims at creating a Center of Excellence in
+            Commerce Management and Technology.
+        </p>
     </div>
 
-    <div class="site-section bg-black about-me">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-6 mb-5 mb-md-0">
-                    <img src="images/background.jpg" alt="Image" class="img-fluid">
-                </div>
-                <div class="col-md-5 ml-auto">
-                    <h2 class="text-white mb-5">About college</h2>
-                    <blockquote class="quote-29281">
-                        <h2><p>PPTM arts and science college  </p></h2>
-                    </blockquote>
-                   <h5><p>PPTM Arts and science college is a premier educational institution run by PPTM Yatheemkhana committee cherur, established in the year 2013, conducting under gratuate
-                    courses under unaided schemes. The yatheem Khana Committee is already well established in the field of education with several instituation from
-                        nursary school to higher secondary</p>
-                    <p>The college is situvated in the historical place Cherur ,which is an easily reachable location on the sides of vengara kondotty road 2km
-                    from vengara 15km.from district head quarter at malappuram 17km from calicut university campus 14km from parappanagadi railwaystation. the college is
-                        affiliated to university of calicut with recognition of gov.t of kerala and offers five under graduate courses under self finance scheme</p></h5>
-
-
-                </div>
-            </div>
-        </div>
+    <div class="thirdp">
+        <h2>CORE VALUES</h2>
+        <p>
+        <ul>
+            <li>We are committed to providing the best educational experience possible to every student and we
+                believe that learning is rooted and grows in creative thought, inquiry, and self-discovery.</li>
+            <li>
+                Respect and tolerance for the views of every individual.
+            </li>
+            <li>
+                Attention to issues of national relevance as well as of global concern.
+            </li>
+            <li>
+                We promote an open and diverse community that encourages an unfettered exchange of ideas, with
+                civility and respect, and the empowerment of all individuals and we believe that by helping others,
+                we enhance our own lives and the lives of others.
+            </li>
+            <li>
+                We promote an open and diverse community that encourages an unfettered exchange of ideas, with
+                civility and respect, and the empowerment of all individuals and we believe that by helping others,
+                we enhance our own lives and the lives of others.
+            </li>
+        </ul>
+        </ul>
+        </p>
     </div>
-
-
-    <script src="about/jquery-3.3.1.min.js"></script>
-    <script src="about/jquery-migrate-3.0.0.js"></script>
-    <script src="about/popper.min.js"></script>
-    <script src="about/bootstrap.min.js"></script>
-    <script src="about/owl.carousel.min.js"></script>
-    <script src="about/jquery.sticky.js"></script>
-    <script src="about/jquery.waypoints.min.js"></script>
-    <script src="about/jquery.animateNumber.min.js"></script>
-    <script src="about/jquery.fancybox.min.js"></script>
-    <script src="about/jquery.stellar.min.js"></script>
-    <script src="about/jquery.easing.1.3.js"></script>
-    <script src="about/bootstrap-datepicker.min.js"></script>
-    <script src="about/isotope.pkgd.min.js"></script>
-    <script src="about/aos.js"></script>
-
-    <script src="about/main.js"></script>
-
+    <div class="fouthp">
+        <h2>COURSE OFFERED</h2>
+        <P>
+        <h4>The college offers Science , Commerce And Arts Programs</h4>
+        <ul>
+            <li>BCA</li>
+            <li>BCOM.fin</li>
+            <li>BCOM.com</li>
+            <li>BBA</li>
+            <li>BA</li>
+        </ul>
+        </P>
+    </div>
+</div>
+<footer>
+    <h5>Copyright &copy 2019 PPTM College Cherur All right reserved</h5>
+</footer>
 </body>
-
 </html>
