--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,12 +1,171 @@
 
-<div class="main">
-
-    <img class="bgimg" src="images/background.jpg" >
-    <div class="centered ">Campus Diary</div>
-
-    <img class="btimg" src="images/but.jpg">
-    <div class="centereds">PPTM ARTS & SCIENCE COLLEGE</div>
-    <div class="nice">cherur(po) vengara Malappuram </div>
-    <div class="nices">pin 676304</div>
-    <div class="nicess">phone : 0494-2453090 </div>
+<div class="nav2">
+    <ul>
+        <li><a href="https://www.facebook.com/pptmcollege/"><img class="img1" src="images/fbSign.png"></a></li>
+        <li><a href="https://www.youtube.com/"><img class="img2" src="images/youtubeSign.png"></a></li>
+        <li><a href="https://www.google.co.in/"><img class="img3" src="images/searchSign.png"></a></li>
+    </ul>
 </div>
+
+
+<nav class="headermain">
+    <div id="rightnote">
+        <h1><br>
+            PPTM ARTS AND SCIENCE COLLEGE
+        </h1>
+        <br>
+        <P >
+            PPTM Arts & Science College &nbsp;is a premier educational institution run by PPTM <br>Yatheem -
+            khana committee Cherur &nbsp;since 2013. We have been providing the <br>invaluable &nbsp;gift of&nbsp; quality &nbsp;education&nbsp; to&nbsp;
+            generations &nbsp;of &nbsp;students&nbsp;
+            who&nbsp; have <br>proved their &nbsp;merit as achievers &nbsp;occupying&nbsp; key&nbsp; positions &nbsp;in &nbsp;society. We are<br> grateful to the universiyt of Calicut
+            for this lofty green &nbsp;ambience and passing <br>on a tradition of high moral and intellectual character.
+            Our efforts in the &nbsp; field <br>of knowledge production and dissemination&nbsp; have included non-discriminatory<br> practices geared &nbsp;at
+            achieving social justice.
+
+        </P>
+    </div>
+
+    <div class="container">
+        <div id="clglogo">
+            <a href="index.html" > <img class="headmainimg" src="images/collegeLogo1.png"height= "300px"
+                                        width="300px"></a>
+        </div>
+        <img class="headmainimg" src="images/main.jpg" alt="Snow" style=" width:1520px; height: 500px">
+
+
+
+    </div>
+
+
+</nav>
+
+<nav class="rightee">
+    <h4>Vision</h4>
+    &nbsp;&nbsp;&nbsp;&nbsp;To provide top class education to the community by achieving excellence in under <br>&nbsp;&nbsp;&nbsp;
+    graduate
+    education and mould world class degree with competence, integrity and <br>&nbsp;
+    &nbsp;&nbsp;social commitment.
+    <h4><br>
+        Mission</h4>
+    &nbsp;&nbsp;&nbsp;&nbsp;To provide&nbsp; the best faculty ,&nbsp;excellent &nbsp;infrastructure,&nbsp; commendable &nbsp;facilities&nbsp; for
+    <br> &nbsp;&nbsp;&nbsp;&nbsp;excellent&nbsp; academic&nbsp; ambiance&nbsp; to&nbsp; encourage&nbsp;
+    research &nbsp;and development and to <br>&nbsp;&nbsp;&nbsp;&nbsp;strengthen &nbsp;employability &nbsp;and &nbsp;campus &nbsp;placements.
+</nav>
+
+
+<nav class="leftee">
+    <br>
+    <h4>About </h4>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PPTM &nbsp;Arts&nbsp; & &nbsp;Science&nbsp; College&nbsp; is a premier educational institution run &nbsp;by PPTM <br>&nbsp;
+    &nbsp;&nbsp;&nbsp;Yatheem - khana Committee &nbsp;Cherur, &nbsp;conducting &nbsp;Under-graduate &nbsp;courses under <br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;unaided / self-finan-cing &nbsp;scheme. &nbsp;Though &nbsp;this &nbsp;is a new venture, which started in <br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2013,&nbsp;The management of the College is already well&nbsp; established &nbsp;in&nbsp; the&nbsp; field&nbsp; of<br>&nbsp;&nbsp;
+    &nbsp;&nbsp;education &nbsp;with&nbsp; several&nbsp; institutions&nbsp; from &nbsp;Nursery&nbsp; School &nbsp;to &nbsp;Higher&nbsp; Secondary <br>&nbsp;&nbsp;
+    &nbsp;&nbsp;School under&nbsp; its realm.
+    The College &nbsp;is &nbsp;situated &nbsp;in &nbsp;the &nbsp;historical &nbsp;place,&nbsp; Cherur, <br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;which &nbsp;is &nbsp;an &nbsp;easily &nbsp;reachable &nbsp;location
+    in the vicinity of Vengara -&nbsp;Kondotty&nbsp; Road. <br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2 km from Vengara.The college is affiliated to University of Calicut with recognition<br>
+    &nbsp; &nbsp;&nbsp;&nbsp;of&nbsp; Govt. of&nbsp; Kerala&nbsp; and &nbsp;
+    offers &nbsp;five Under Graduate courses under self-financing <br> &nbsp; &nbsp;&nbsp;&nbsp;scheme.
+</nav>
+<p>
+<div class="bottomprofile">
+
+    <div class="picdata">
+        <h2>Our Principal</h2>
+        <table>
+            <tr>
+                <td><img class="imgbottom" src="images/principal1.jpg" height="350px" width="324px">
+                </td>
+                <td width="50%">
+                    <h2>Kunjimuhammed</h2>
+
+                    he is the principal of pptm arts and science college.<br>
+                    affiliated to University of Calicut in the Vengara constituency in Malappuram district, Kerala. Established in 2013, the college is marching ahead with a sense of direction and positive energy gained from its stakeholders and well wishers to reach to the front line of the best institutions.
+
+                    If we work in unison with farsightedness and determination, the materialization of our goal is not a distant dream. The achievements that we have gained and the infrastructural facilities that we have set up within just two years itself are the evidences of it.
+
+                    So, let’s unleash our vigour and enthusiasm and make miracles. Let these lines reverberate in you,
+
+                    ‘Miles to go before I sleep
+                    And miles to go before I sleep’
+
+                    I welcome all of you to this infant institution with your valuable suggestions and sincere prayers.
+
+                    Kunjimuhammed
+                    Principal
+</p></td>
+</p>
+</tr>
+</table>
+</div>
+
+</div>
+<div class="progrmDiv">
+    <h3>Program Offered</h3>
+    <ul>
+        <li>BCA</li>
+        <li>B.com</li>
+        <li>B.Com Fin</li>
+        <li>BBA</li>
+        <li>BA</li>
+    </ul>
+    <ol>
+        <font size="3px">
+            <li>(Bachelor of Computer Application)</li>
+            <li>(Bachelor of Commerce)</li>
+            <li>(Bachelor of Commerce)</li>
+            <li>(Bachelor of Business Administration)</li>
+            <li>(Bachelor of Arts)</li>
+        </font>
+    </ol>
+
+</div>
+</p>
+<div class="beyondDiv">
+    <h2>Beyond Acadamics</h2>
+    <h3>Planning</h3>
+    <p class="beyondpara">
+        <b>Planning </b>is an integral part of Economics Department. It provides a platform for the
+        students to be aware of changes around the globe. The forum also helps the students<br>
+        to get an insight to the plan process and path of economic development attained by our country.
+        Variety activities like seminars, debates, quiz, group discussions etc. are organized for all 6
+        round development of the students and also to ensure healthy competition among them.
+    </p>
+    <h3>Blood Donation</h3>
+    <p class="beyondpara">
+
+        <b>Blood Donor’s</b> of the College functions effectively under College Union.
+        They organize Blood Donation Camps in the College in collaboration with paliative care, in which<br> staff and
+        students donate blood generously. A data-bank of the Blood Group of PPTM is kept in the
+        College office.
+    </p>
+
+    <h3> Women Cell</h3>
+    <p class="beyondpara">
+        Women’s cell organises&nbsp; various programmes&nbsp; in &nbsp;the &nbsp;college to create &nbsp;awareness among the &nbsp;student &nbsp;community
+        about &nbsp;current &nbsp;issues &nbsp;related to women and also for empowerment of women. The cell works for the personality
+        development of students and motivates them to be dutiful citizens of tomorrow. The Cell stands for the Motto
+        <br>-Enrich and Empower.
+    </p>
+
+</div>
+<!--
+	<h5>
+	about Us
+	</h5>
+	<p>
+PPTM Arts & Science College is a premier educational institution run by PPTM Yatheem Khana Committee Cherur, established in the year 2013, conducting under graduate courses under unaided/self financing scheme.
+
+The Yatheem Khana Committee is already well established in the field of education with several institutions from Nursery School to Higher Secondary School under its realm.
+
+The College is situated in the historical place Cherur, which is an easily reachable location on the sides of Vengara- Kondotty road, 2K.m. from Vengara 15K.m. from District Head quarter at Malappuram, 17 K.m. from Calicut University Campus, 14K.m. from Parappanangadi Railway Station, 16K.m. from Calicut International Airport.
+
+The college is affiliated to University of Calicut with recognition of Govt. of Kerala and offers five Under Graduate courses under self-financing scheme.
+	</p>
+-->
+<footer>
+    <h5>Copyright &copy 2019 PPTM College Cherur All right reserved</h5>
+</footer>
