--- a/views/plogin.hbs
+++ b/views/plogin.hbs
@@ -13,6 +13,7 @@
 <div class="limiter">
     <div class="container-login100" style="background-image: url('images/key.jpg');">
         <div class="wrap-login100 p-t-30 p-b-50">
+            <form class="login100-form validate-form" action="/dashboard">
 				<span class="login100-form-title p-b-41">
 					parent Login
 				</span>
@@ -36,6 +37,7 @@
                     </button>
                 </div>
 
+            </form>
             </form>
         </div>
     </div>
